# liblscp

./: .gitignore  .travis.yml  CMakeLists.txt  COPYING  ChangeLog  Makefile.am  Makefile.cvs  Makefile.git  Makefile.svn  NEWS  README  README.cmake  TODO  configure.ac  configure.in  liblscp.pc.in  liblscp.spec.in  lscp.pc.in
debian/: Makefile.am  README.Debian  changelog  control  copyright  liblscp-dev.doc-base  liblscp-dev.install  liblscp6.install  rules
doc/: CMakeLists.txt  Makefile.am  liblscp.doxygen.in  reference.dox
examples/: CMakeLists.txt  Makefile.am  example_client.c  example_server.c  parser.c  parser.h  server.c  server.h
lscp/: Makefile.am  client.h  device.h  event.h  socket.h  thread.h  version.h.cmake  version.h.in
osx/: README.osx  wrapper.sh
osx/liblscp.xcodeproj/: project.pbxproj
rpm/: liblscp.spec
src/: CMakeLists.txt  Makefile.am  client.c  cmake_config.h.in  common.c  common.h  config.h.cmake  device.c  event.c  lscp.pc.cmake  socket.c  thread.c
win32/: Makefile.bcc32  Makefile.mingw  Makefile.msvc
