# Process this file with autoconf to produce a configure script.
AC_INIT(src/client.c)
AM_CONFIG_HEADER(src/config.h)

AM_INIT_AUTOMAKE(liblscp, 0.2.0.91)

# Checks for programs.
AC_PROG_CC
AC_PROG_LIBTOOL

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(stdlib.h string.h netdb.h arpa/inet.h netinet/tcp.h netinet/in.h sys/socket.h unistd.h)

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

# Checks for library functions.
AC_CHECK_FUNCS(strdup strtok_r memset memmove socket connect bind listen setsockopt getsockopt getsockname gethostbyname)

# Checks for pthread library.
AC_CHECK_LIB(pthread, pthread_create)

AC_ENABLE_STATIC(no)
AC_ENABLE_SHARED(yes)

# Checks for doxygen.
AC_CHECK_PROG(ac_doxygen, doxygen, [doc], [])
AC_SUBST(ac_doxygen)

AC_OUTPUT(Makefile src/Makefile lscp/Makefile examples/Makefile doc/Makefile doc/liblscp.doxygen liblscp.pc liblscp.spec lscp/version.h)

